# TIMESTEP-SE-sandbox

./: .gitignore  README.rst  __init__.py
docs/: about.rst  conf.py  index.rst  start.rst
docs/api/: core.rst  modules.rst
src/: __init__.py  core.py  pyproject.toml  utils.py
